Connected with MOngoAtlas

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,2 @@
 PORT = 3000
+MONGO_URI = "mongodb+srv://backend-deployment-7253:backend-deployment@cluster0.tzqjtj0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
